--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -397,6 +397,17 @@
                             </a>
                         </li>
 
+                        <li class="sidebar-item">
+                            <a class="sidebar-link {% block summer_active %} {% endblock %}"
+                                href="{% url 'student_flames' %}" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-flame"></i>
+                                </span>
+                                <span class="hide-menu">Summers😎</span>
+
+                            </a>
+                        </li>
+
                         {% comment %}
 
                         <!-- <li class="sidebar-item">
