--- a/templates/student/flames.html
+++ b/templates/student/flames.html
@@ -550,6 +550,16 @@ active
 
 {% block body %}
 <div class="container py-4">
+
+    {% for message in messages %}
+
+    <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
+        <strong>{{ message.tag }}</strong> {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+
+    {% endfor %}
+    
     <div class="tab-container">
         <div class="tab-buttons">
             <button class="tab-button active" data-tab="registrations">My Registrations</button>
@@ -707,7 +717,7 @@ active
             {% empty %}
             <div class="col-12">
                 <div class="no-registrations">
-                    <i class="fas fa-calendar-times"></i>
+                    <i class="fas -calendar-times"></i>
                     <h4>No Programs Available</h4>
                     <p>There are currently no F.L.A.M.E.S programs available for registration.</p>
                 </div>
